# Bologna

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.pl
.github/workflows/: automation_test.yaml
ANTLR/: FOL.g4  FOL.interp  FOLLexer.py  FOLLexer.tokens  FOLListener.py  FOLParser.py  Prolog.g4  PrologLexer.py  PrologListener.py  PrologParser.py
ANTLR/.antlr/: Datalog.interp  DatalogBaseListener.java  DatalogLexer.interp  DatalogLexer.java  DatalogLexer.tokens  DatalogListener.java  DatalogParser.java  FOLLexer.interp  FOLLexer.java  FOLParser.java  PrologLexer.java  PrologParser.java  PrologParserLexer.java  PrologParserParser.java
graphs/: parse_tree.gv
