[tool.poetry]
name = "fol_parser"
version = "0.2.0"
description = "FOL Parser"
authors = ["Emre Kuru emre.kuru@ozu.edu.tr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
download_antlr = "curl -O https://www.antlr.org/download/antlr-4.9.2-complete.jar"
antlr_gen = "java -jar antlr-4.9.2-complete.jar -Dlanguage=Python3 -o FOL.g4"
clean = "rm -rf generated/*"

# nsures ANTLR JAR is downloaded before generating the parser
antlr = [
    "poe download_antlr",
    "poe antlr_gen"
]
